# mora-base

./: .gitignore  .gitmodules  AUTHORS.txt  CMakeLists.txt  README.md
distro/: openmora-pkgs.yaml
modules-common/: CMissionReader2ConfigFile_adaptor.h  COpenMORAMOOSApp.h  do_opencv_includes.h  mora_main.h
scripts/: impl_mora-cd.py  impl_mora-cd.sh  mora-build  mora-build.bat  mora-build.py  mora-cd  mora-cd.bat  mora-pull  mora-pull.bat  mora-pull.py  mora-setup.sh  morautils.py
templates/: MORAConfig.cmake.in  pkg-root-CMakeLists.txt.in
